force-app/main/default/objects/dbt__Timesheet__c/dbt__Timesheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>