force-app/main/default/objects/dbt__Timesheet__c/fields/dbt__Absence_Hours__c.field-meta.xml
<CustomField>
    <fullName>dbt__Absence_Hours__c</fullName>
    <label>Absence Hours</label>
    <summarizedField>dbt__Timesheet_Line_Item__c.dbt__Duration__c</summarizedField>
    <summaryFilterItems>
        <field>dbt__Timesheet_Line_Item__c.dbt__Type__c</field>
        <operation>equals</operation>
        <value>Absence</value>
    </summaryFilterItems>
    <summaryForeignKey>dbt__Timesheet_Line_Item__c.dbt__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>