force-app/main/default/objects/dbt__Timesheet__c/fields/dbt__Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>dbt__Billable_Hours__c</fullName>
    <label>Billable Hours</label>
    <summarizedField>dbt__Timesheet_Line_Item__c.dbt__Duration__c</summarizedField>
    <summaryFilterItems>
        <field>dbt__Timesheet_Line_Item__c.dbt__Billable__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>dbt__Timesheet_Line_Item__c.dbt__Type__c</field>
        <operation>equals</operation>
        <value>Attendance</value>
    </summaryFilterItems>
    <summaryForeignKey>dbt__Timesheet_Line_Item__c.dbt__Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>