force-app/main/default/objects/dbt__Timesheet__c/fields/dbt__Employee__c.field-meta.xml
<CustomField>
    <fullName>dbt__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>dbt__Employee__c</referenceTo>
    <relationshipName>Timesheet_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>