force-app/main/default/objects/dbt__Timesheet__c/fields/dbt__Manager__c.field-meta.xml
<CustomField>
    <fullName>dbt__Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheet_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>