force-app/main/default/objects/dbt__Timesheet__c/fields/dbt__Met_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>dbt__Met_Weekly_Hours__c</fullName>
    <formula>dbt__Total_Hours__c  &gt;= CASE(WEEKDAY(dbt__Start_Date__c), 2,5*8,3,4*8,4,3*8,5,2*8,6,1*8,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Met Weekly Hours</label>
    <type>Checkbox</type>
</CustomField>