force-app/main/default/objects/dbt__Timesheet__c/fields/dbt__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>dbt__Total_Hours__c</fullName>
    <formula>dbt__Absence_Hours__c  +  dbt__Billable_Hours__c  + dbt__Non_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>