force-app/main/default/objects/dbt__Timesheet__c/listViews/dbt__All.listView-meta.xml
<ListView>
    <fullName>dbt__All</fullName>
    <columns>NAME</columns>
    <columns>dbt__Employee__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>dbt__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>